--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,27 +3,30 @@ name: Test and Deploy
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
-  test-and-deploy:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
-
-      - name: Deploy to server
-        uses: appleboy/scp-action@v0.2.0
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          port: ${{ secrets.SERVER_PORT }}
-          source: ./dist
-          target: /var/www/html
+          node-version: '16'
+      - run: npm install
+      - run: npm run test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/upload-artifact@v3
+        with:
+          name: website-files
+          path: .
+      - uses: actions/create-pages-site@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          build_dir: . 
+          publish_dir: /
