--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,15 +1,20 @@
 name: Test and Deploy
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
       - main
-      
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
