and another one Update test-and-deploy.yml

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          permissions: 'write'
+          permissions: 'read'
       - run: npm install
-      - run: sudo npm run test
+      - run: npm run test
 
   deploy:
     runs-on: ubuntu-latest
