and another one Update test-and-deploy.yml

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,7 +1,6 @@
 name: Test and Deploy
 
-permissions:
-  contents: write
+permissions: read-all
 
 on:
   push:
@@ -18,7 +17,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          permissions: 'write'
+          permissions: 'read'
       - run: npm install
       - run: npm run test
 
