and another one Update test-and-deploy.yml

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -11,15 +11,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          permissions: 'write'
-      - run: npm install
-      - run: npm test
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
 
   deploy:
     runs-on: ubuntu-latest
