--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -11,10 +11,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - run: chmod +x ./node_modules/.bin/jest
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
-      - name: Run tests
+      - name: Run test
         run: npm test
 
   deploy:
