--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -40,3 +40,5 @@ jobs:
           # Имя репозитория GitHub Pages
           publish_branch: gh-pages
           user_email: ${{ secrets.GIT_EMAIL }}
+
+# and the final one )
