--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -38,7 +38,7 @@ jobs:
           # Имя пользователя GitHub
           repo_name: 'BanderlogCumberbatch.github.io'
           # Имя репозитория GitHub Pages
-          publish_branch: gh-pages
+          publish_branch: nlc7
           user_email: ${{ secrets.GIT_EMAIL }}
 
 # and the final one )
